# vvote

./: .env.example  .gitignore  Cargo.toml  README.md  __mod.rs  build.sh  vvote.pgsql
jelly/: Cargo.toml
jelly/src/: _server.rs  lib.rs  prelude.rs  server.rs
jelly/tests/: mail.rs
migrations/: 20230309024150_user.down.sql  20230309024150_user.up.sql  20230309025346_election_slot.down.sql  20230309025346_election_slot.up.sql  20230309025401_elections.down.sql  20230309025401_elections.up.sql  20230309025414_ipvalidations.down.sql  20230309025414_ipvalidations.up.sql  20230309025440_nominee_slot.down.sql  20230309025440_nominee_slot.up.sql  20230309025456_nominees.down.sql  20230309025456_nominees.up.sql  20230309025508_positions.down.sql  20230309025508_positions.up.sql  20230309025518_results.down.sql  20230309025518_results.up.sql  20230309025537_slots.down.sql  20230309025537_slots.up.sql  20230309025554_voters.down.sql  20230309025554_voters.up.sql  20230311174917_settings.down.sql  20230311174917_settings.up.sql
src/: csrf.rs  error.rs  lib.rs  main.rs
src/admin/: forms.rs  mod.rs
src/auth/: _config.rs  config.rs  forms.rs  mod.rs
src/extractor/: mod.rs  multipart_form.rs
src/extractors/: dynamic_form.rs  mod.rs  multipart_form.rs
src/front/: forms.rs  mod.rs
src/helpers/: _upload.rs  csrf.rs  form.rs  mod.rs
src/models/: admin.rs  election.rs  mod.rs  nominee.rs  position.rs  result.rs  slot.rs  voter.rs
templates/: debug.html  layout.html
templates/admin/: dashboard.html  results.html  votes.html
tests/: templates.rs
(+109 files in other folders)
