[package]
name = "vvote"
version = "0.1.0"
authors = ["Daud Oladipo <daudonmail@gmail.com>"]
edition = "2021"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64-url = "1.4.8"
jelly = { path = "jelly" }
log = "*"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "json"] }
simple_excel_writer = "0.2.0"
actix-easy-multipart = "3.0.0"
actix-web = "4"
timeago = "0.3.1"
base64 = "0.13"
sha1 = "0.10.5"
reqwest = { version = "0.11.12", features=["json", "multipart", "stream"]}

[features]
default = ["jelly/template_watcher", "jelly/static", "jelly/redis-session"]
production = ["jelly/production"]
cloudinary = []
[dev-dependencies]
anyhow = "1.0.42"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
test-log = "0.2.8"
